<resources>
    <string name="app_name">DR Egypt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">1256853057779143</string>
    <string name="fb_login_protocol_scheme">fb1256853057779143</string>

    <!-- Start of Hima Strings -->
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet?</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="Login"> <u>Login</u> </string>
    <string name="Sign_Up_here"> <u>Sign Up here.</u> </string>
    <string name="pls_S_In_Up">Please sign up or login</string>
    <string name="Not_Now"><u>Not now</u></string>
    <string name="More_Details"><u>More details ></u></string>
    <string name="ratingIconHeartFilled">♥</string>
    <string name="ratingIconHeartOutline">♡</string>


    <!-- End of Hima Strings -->


</resources>
