
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_weight="10"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2.5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pls_S_In_Up"
            android:layout_centerHorizontal="true"
            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
             />
        <Button
            android:id="@+id/fb_mang2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="#416BC1"
            android:text="FaceBook"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/login_layout"
        android:weightSum="10"
        android:id="@+id/LoginOR"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Or"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        >
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/bluoo"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <EditText
                android:id="@+id/login_emailid"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/login_password"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp" >

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/newUser"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Sign_Up_here"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</LinearLayout>